# dsp_embedded

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  RELEASE_NOTES.md  cache.md  development_plan.md  example_setup.md  partitions.csv  sdkconfig.defaults  sdkconfig.psram  target.md
components/dsp_application/: CMakeLists.txt  dsp_application.c
components/dsp_application/include/: dsp_application.h
components/dsp_build/: CMakeLists.txt  dsp_build.c
components/dsp_build/include/: dsp_build.h
components/dsp_catalog/: CMakeLists.txt  dsp_catalog.c
components/dsp_catalog/include/: dsp_catalog.h
components/dsp_config/: Kconfig
components/dsp_config/include/: dsp_config.h
components/dsp_daps/: CMakeLists.txt  dsp_daps.c
components/dsp_daps/include/: dsp_daps.h
components/dsp_dht20/: CMakeLists.txt  Kconfig  dsp_dht20.c
components/dsp_dht20/include/: dsp_dht20.h
components/dsp_http/: CMakeLists.txt  dsp_http.c
components/dsp_http/include/: dsp_http.h
components/dsp_identity/: CMakeLists.txt  dsp_identity.c
components/dsp_identity/include/: dsp_identity.h
components/dsp_json/: CMakeLists.txt  dsp_json.c
components/dsp_json/include/: dsp_json.h
components/dsp_jsonld/: CMakeLists.txt
components/dsp_jsonld/include/: dsp_jsonld_ctx.h
components/dsp_jwt/: CMakeLists.txt  dsp_jwt.c
components/dsp_jwt/include/: dsp_jwt.h
components/dsp_mbedtls/: CMakeLists.txt  dsp_tls.c
components/dsp_mbedtls/include/: dsp_tls.h  mbedtls_config_dsp.h
components/dsp_mem/: CMakeLists.txt  dsp_mem.c
components/dsp_mem/include/: dsp_mem.h
components/dsp_msg/: CMakeLists.txt  dsp_msg.c
components/dsp_msg/include/: dsp_msg.h
components/dsp_neg/: CMakeLists.txt  dsp_neg.c
components/dsp_neg/include/: dsp_neg.h
components/dsp_power/: CMakeLists.txt  dsp_power.c
components/dsp_power/include/: dsp_power.h
components/dsp_protocol/: CMakeLists.txt  dsp_protocol.c
components/dsp_protocol/include/: dsp_protocol.h
components/dsp_psk/: CMakeLists.txt  dsp_psk.c
components/dsp_psk/include/: dsp_psk.h
components/dsp_rtc_state/: CMakeLists.txt  dsp_rtc_state.c
components/dsp_rtc_state/include/: dsp_rtc_state.h
components/dsp_shared/: CMakeLists.txt  dsp_shared.c
components/dsp_shared/include/: dsp_shared.h
components/dsp_wifi/: CMakeLists.txt  dsp_wifi.c
components/dsp_wifi/include/: dsp_wifi.h
components/dsp_xfer/: CMakeLists.txt  dsp_xfer.c
components/dsp_xfer/include/: dsp_xfer.h
doc/: compatibility_matrix.md  deviation_log.md  power_measurement.md  ram_budget.md  static_analysis.md
docker/: docker-compose.yml
docker/certs/: test-private.pem  test-public.pem
docker/dsp-counterpart/: main.py
docker/seed/: seed-test-data.sh
integration/: conftest.py  pytest.ini  test_701_catalog.py  test_702_negotiation.py  test_703_transfer.py
main/: CMakeLists.txt  Kconfig.projbuild  main.c
test/: CMakeLists.txt  test_catalog_request_on.c  test_catalog_request_on_main.c  test_dsp_application.c  test_dsp_build.c  test_dsp_catalog.c  test_dsp_daps.c  test_dsp_dht20.c  test_dsp_http.c  test_dsp_identity.c  test_dsp_json.c  test_dsp_jsonld.c  test_dsp_jwt.c  test_dsp_mem.c  test_dsp_msg.c  test_dsp_neg.c  test_dsp_power.c  test_dsp_power_on.c  test_dsp_power_on_main.c  test_dsp_protocol.c  test_dsp_psk.c  test_dsp_ring_buf.c  test_dsp_rtc_state.c  test_dsp_shared.c  test_dsp_tls.c  test_dsp_tls_tickets.c  test_dsp_wifi.c  test_dsp_xfer.c  test_main.c  test_psk_on.c  test_psk_on_main.c  test_smoke.c  test_terminate_on.c  test_terminate_on_main.c  test_tickets_off.c  test_tickets_off_main.c
test/stubs/: esp_err.h  esp_log.h
test/stubs/freertos/: FreeRTOS.h  queue.h  semphr.h  task.h
tools/: gen_dev_certs.sh  provision.py
